crates/bevy_reflect/compile_fail/tests/into_function/arguments_fail.stderr
error[E0599]: the method `into_function` exists for fn item `fn(i32, ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...) {too_many_arguments}`, but its trait bounds were not satisfied
  --> tests/into_function/arguments_fail.rs:LL:CC
   |
LL |     let _ = too_many_arguments.into_function();
   |                                ^^^^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
   = note: the full type name has been written to 'BEVY_ROOT/bevy_reflect/compile_fail/target/ui/0/tests/into_function/long-type.sr''
   = note: consider using `--verbose` to print the full type name to the console
   = note: the following trait bounds were not satisfied:
           `fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: ReflectFn<'_, _>`
           which is required by `fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: IntoFunction<'_, (_, _)>`
           `fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: TypedFunction<_>`
           which is required by `fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: IntoFunction<'_, (_, _)>`
           `&fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: ReflectFn<'_, _>`
           which is required by `&fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: IntoFunction<'_, (_, _)>`
           `&fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: TypedFunction<_>`
           which is required by `&fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: IntoFunction<'_, (_, _)>`
           `&mut fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: ReflectFn<'_, _>`
           which is required by `&mut fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: IntoFunction<'_, (_, _)>`
           `&mut fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: TypedFunction<_>`
           which is required by `&mut fn(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) {too_many_arguments}: IntoFunction<'_, (_, _)>`

error[E0599]: the method `into_function` exists for fn item `fn(Foo) {argument_not_reflect}`, but its trait bounds were not satisfied
  --> tests/into_function/arguments_fail.rs:LL:CC
   |
LL |     let _ = argument_not_reflect.into_function();
   |                                  ^^^^^^^^^^^^^ method cannot be called on `fn(Foo) {argument_not_reflect}` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `fn(Foo) {argument_not_reflect}: ReflectFn<'_, _>`
           which is required by `fn(Foo) {argument_not_reflect}: IntoFunction<'_, (_, _)>`
           `fn(Foo) {argument_not_reflect}: TypedFunction<_>`
           which is required by `fn(Foo) {argument_not_reflect}: IntoFunction<'_, (_, _)>`
           `&fn(Foo) {argument_not_reflect}: ReflectFn<'_, _>`
           which is required by `&fn(Foo) {argument_not_reflect}: IntoFunction<'_, (_, _)>`
           `&fn(Foo) {argument_not_reflect}: TypedFunction<_>`
           which is required by `&fn(Foo) {argument_not_reflect}: IntoFunction<'_, (_, _)>`
           `&mut fn(Foo) {argument_not_reflect}: ReflectFn<'_, _>`
           which is required by `&mut fn(Foo) {argument_not_reflect}: IntoFunction<'_, (_, _)>`
           `&mut fn(Foo) {argument_not_reflect}: TypedFunction<_>`
           which is required by `&mut fn(Foo) {argument_not_reflect}: IntoFunction<'_, (_, _)>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
